# Automation-of-uploading-images-to-Twitter-account

./: .gitignore  README.md  main.py  pyproject.toml
settings/: config.py  template-payload.json  topics-images.json
settings/LLM/: input_prompt.py  instructions_model_improve.py  instructions_model_llm.py
src/LLM/: graph.py  ollama.py  schemas.py  templates.py
src/utils/: image.py  twitter.py
